Changes in Shorewall 4.4.6

1)  Fix for rp_filter and kernel 2.6.31.

2)  Add a hack to work around a bug in Lenny + xtables-addons

3)  Re-enable SAVE_IPSETS

4)  Allow both <...> and [...] for IPv6 Addresses.

5)  Port mark geometry change from 4.5.

6)  Add Macro patch from Tuomo Soini

7)  Add 'show macro' command.

Changes in Shorewall 4.4.5

1)  Fix 15-port limit removal change.

2)  Fix handling of interfaces with the 'bridge' option.

3)  Generate error for port number 0

4)  Allow zone::serverport in rules DEST column.

5)  Fix 'show policies' in Shorewall6.

6)  Auto-load tc modules.

7)  Allow LOGFILE=/dev/null

8)  Fix shorewall6-lite/shorecap

9) Fix MODULE_SUFFIX.

10) Fix ENHANCED_REJECT detection for IPv4.

11) Fix DONT_LOAD vs 'reload -c'

12) Fix handling of SOURCE and DEST vs macros.

13) Remove silly logic in expand_rule().

14) Add current and limit to Conntrack Table Heading.

Changes in Shorewall 4.4.4

1)  Change STARTUP_LOG and LOG_VERBOSITY in default shorewall6.conf.

2)  Fix access to uninitialized variable.

3)  Add logrotate scripts.

4)  Allow long port lists in /etc/shorewall/routestopped.

5)  Implement 'physical' interface option.

6)  Implement ZONE2ZONE option.

7)  Suppress duplicate COMMENT warnings.

8)  Implement 'show policies' command.

9)  Fix route_rule suppression for down provider.

10) Suppress redundant tests for provider availability in route rules
    processing.

11) Implement the '-l' option to the 'show' command.

12) Fix class number assignment when WIDE_TC_MARKS=Yes

13) Allow wide marks in tcclasses when WIDE_TC_MARKS=Yes

Changes in Shorewall 4.4.3

1)  Move Debian INITLOG initialization to /etc/default/shorewall

2)  Fix 'routeback' in /etc/shorewall/routestopped.

3)  Rename 'object' to 'script' in compiler and config modules.

4)  Correct RETAIN_ALIASES=No.

5)  Fix detection of IP config.

6)  Fix nested zones.

7)  Move all function declarations from prog.footer to prog.header
