@@ -44,6 +44,8 @@
 
       <arg><option>-p</option></arg>
 
+      <arg><option>-r</option></arg>
+
       <arg><replaceable>directory</replaceable></arg>
     </cmdsynopsis>
 
@@ -584,6 +586,10 @@
           <para>The <option>-p</option> option causes the compiler to be
           profiled via the Perl <option>-wd:DProf</option> command-line
           option.</para>
+
+          <para>The <option>-r</option> option was added in Shorewall 4.5.2
+          and causes the compiler to print the generated ruleset to standard
+          out.</para>
         </listitem>
       </varlistentry>
 
