@@ -49,6 +49,9 @@ Shorewall 4.4.6
     you to trace selected packets through Netfilter, including marking
     by tcrules. 
 
+12) You may now preview the generated ruleset by using the '-r' option
+    to the 'check' command (e.g., "shorewall check -r").
+
 ----------------------------------------------------------------------------
                     M I G R A T I O N   I S S U E S
 ----------------------------------------------------------------------------
@@ -264,6 +267,12 @@ None.
     	      shorewall show macro LDAP
 
     The command displays the contents of the macro.<macro> file.
+
+6)  You may now preview the generated ruleset by using the '-r' option
+    to the 'check' command (e.g., "shorewall check -r").
+
+    The output is a shell script fragment, similar to the way it
+    appears in the generated script.
 
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 4 . 0
