@@ -14,6 +14,8 @@ Changes in Shorewall 4.4.6
 
 7)  Add 'show macro' command.
 
+8) Add -p option to check.
+
 Changes in Shorewall 4.4.5
 
 1)  Fix 15-port limit removal change.
